[package]
name = "blackjack"
version = "0.1.0"
authors = ["Matt Traudt <sirmatt@ksu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
# rayon = "1.2"
clap = "~2.33"
# derive_more = "0.99"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
xz2 = "0.1"

[profile.release]
lto = true
