[package]
name = "bj-core"
version = "0.1.0"
authors = ["Matt Traudt <sirmatt@ksu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
readfilter = "0.1"
