[package]
name = "bj-web-custom-card"
version = "0.1.0"
authors = ["Matt Traudt <sirmatt@ksu.edu>"]
edition = "2018"

[lib]
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
bj-core = { path = "../../bj-core", version = "*" }
bj-web-core = { path = "../core", version = "*" }
#rand = { version = "0.7", features = ["wasm-bindgen"] }
#lazy_static = "1.4"
console_error_panic_hook = "0.1"
#serde = "1.0"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
#   'CssStyleDeclaration',
   'Document',
   'DomTokenList',
   'Element',
   'HtmlElement',
   'HtmlCollection',
#   'Storage',
   'Window',
]
